<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="30dp"
    android:paddingTop="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtCreateAccount"
        android:text="@string/CreateAccount"
        android:fontFamily="@font/scheherazade_bold"
        android:textColor="@color/text_desColor"
        android:textSize="40sp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtUser"
        android:text="@string/userName"
        android:fontFamily="@font/scheherazader"
        android:textColor="@color/text_desColor"
        android:textSize="27sp"
        android:layout_marginTop="20dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="10dp"
        android:id="@+id/EdtUser"
        android:background="@drawable/custom_editext"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtEmail"
        android:text="@string/email"
        android:fontFamily="@font/scheherazader"
        android:textColor="@color/text_desColor"
        android:textSize="27sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/Edtemail"
        android:paddingStart="10dp"
        android:background="@drawable/custom_editext"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtPass"
        android:text="@string/password"
        android:fontFamily="@font/scheherazader"
        android:textColor="@color/text_desColor"
        android:textSize="27sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/EdtPassword"
        android:paddingStart="10dp"
        android:background="@drawable/custom_editext"
        android:inputType="textPassword"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTypePass"
        android:text="@string/type_Password"
        android:fontFamily="@font/scheherazader"
        android:textColor="@color/text_desColor"
        android:textSize="27sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:paddingStart="10dp"
        android:id="@+id/EdtTypePass"
        android:background="@drawable/custom_editext"
        android:inputType="textPassword"
        />
    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cbPolicy"
        android:text="@string/policy"
        android:fontFamily="@font/scheherazader"
        android:textColor="@color/black"
        android:textSize="27sp"/>
    <android.widget.Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_bottom"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/CreateAccount"
        android:backgroundTint="@color/primary_color"
        android:id="@+id/btnCreateAccount"
        android:fontFamily="@font/scheherazade_bold"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textAllCaps="false"
        />
</LinearLayout>